--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,9 @@ services:
     networks:
       - app_network
 
+volumes:
+  db-data:
+
 # Define a network, which allows containers to communicate
 # with each other, by using their container name as a hostname
 networks:
