--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,7 +23,9 @@
     "vite": "^5.2.0"
   },
   "dependencies": {
+    "bits-ui": "^0.21.1",
     "clsx": "^2.1.0",
+    "lucide-svelte": "^0.363.0",
     "tailwind-merge": "^2.2.2",
     "tailwind-variants": "^0.2.1"
   }
