--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,6 +23,7 @@
     "vite": "^5.2.0"
   },
   "dependencies": {
+    "@tanstack/svelte-query": "^5.28.9",
     "bits-ui": "^0.21.1",
     "clsx": "^2.1.0",
     "lucide-svelte": "^0.363.0",
