--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.0",
     "lucide-svelte": "^0.363.0",
     "mode-watcher": "^0.3.0",
+    "svelte-sonner": "^0.3.21",
     "tailwind-merge": "^2.2.2",
     "tailwind-variants": "^0.2.1"
   }
