--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.3.2",
     "@nestjs/swagger": "^7.3.1",
+    "@nestjs/throttler": "^5.1.2",
     "@prisma/client": "5.11.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
